Used sql server as the project database. Hardcoded local database in connection string.

--- a/Pages/Account/List.cshtml
+++ b/Pages/Account/List.cshtml
@@ -12,7 +12,7 @@
 
     @foreach (var customer in Model.Customers)
     {
-        <div>@customer.FirstName</div>
+        <div>@customer.LastName, @customer.FirstName</div>
     }
     
 </body>
