--- a/WebApp/Pages/Account/Create.cshtml
+++ b/WebApp/Pages/Account/Create.cshtml
@@ -1,5 +1,5 @@
 @page
-@model microbank.Pages.Account.CreateModel
+@model microbank.WebApp.Pages.Account.CreateModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <html>
