--- a/WebApp/Pages/Account/List.cshtml
+++ b/WebApp/Pages/Account/List.cshtml
@@ -1,5 +1,5 @@
 @page
-@model microbank.Pages.Account.ListModel
+@model microbank.WebApp.Pages.Account.ListModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <html>
